--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "front",
-  "version": "0.1.0",
+  "name": "fullstack-test-hockey-game-front",
+  "version": "1.0.0",
   "private": true,
+  "description": "Front du test technique Maplr",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -43,5 +44,9 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.25"
+  },
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
   }
 }
